--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -44,5 +44,5 @@
 
 
 %---------Comments -----------------------%
-\newcommand{\Idit}[1]{\textbf{#1}}
+\newcommand{\Idit}[1]{{\color{blue}{[\textbf{Idit:} #1 ]}}}
 \newcommand{\Xomit}[1]{}
