another small fix

--- a/Tex/src/algorithm.tex
+++ b/Tex/src/algorithm.tex
@@ -50,7 +50,7 @@ Next we explain what the transformation does in each phase.
 
 \paragraph{Read-only Phase} 
   During this phase the operation maintains a \emph{locked set}
-  and a \mph{read set}. 
+  and a \emph{read set}. 
   The locked set is used to track the lock and unlock steps
   of the locking protocol, thus, we replace each lock step 
   with a a step adding the object to the locked set and each
