--- a/Tex/src/introduction.tex
+++ b/Tex/src/introduction.tex
@@ -4,7 +4,9 @@ The steady increase in the number of  cores in today's computers is driving soft
 Indeed, many recent works have developed scalable concurrent data
 structures~\cite{ArbelA2014,DrachslerVY2014,NatarajanM2014,BrownER2014,CrainGR2013,BraginskyP2012,
 AfekKKMT2012,EllenFRB2010,BronsonCCO2010,HerlihyLLS2007}.
-Such efforts are often very successful, achieving performance that scales linearly with the number of threads. 
+Such efforts are often very successful, achieving performance that scales well
+%linearly 
+with the number of threads. 
 Nevertheless, each of these project generally focuses on a single data structure 
 (for example, a binary search tree~\cite{citrus} or \Idit{give another example}) and manually optimizes its implementation. 
 Proving the correctness of such custom-tailored data structures is painstaking 
@@ -22,7 +24,7 @@ Domination Locking~\cite{Gueta2011} is applicable to all trees or forests
 (including binary search trees, BTrees, Treaps, etc \Idit{more?}), 
 and employs a variant of hand-over-hand locking~\cite{SilberschatzK1980}, 
 acquiring and releasing locks as it goes down the tree.  
-Other approaches are applicable to DAGS~\cite{dag-locking}. 
+%%Other approaches are applicable to DAGS~\cite{dag-locking}. 
 Unfortunately, to date, solutions of this sort scale poorly. 
 This is due to synchronization bottlenecks such as the root of the tree, 
 which is locked by all operations.
@@ -40,12 +42,13 @@ Further comparison with related work appears in Section~\ref{sec:related}.
 
 Our approach works as follows: Given a sequential data structure implementation, 
 it first invokes a given (black-box) mechanism that instruments the code and adds  
-fine-grained locks, e.g.,~\cite{Gueta2011,SilberschatzK1980,dag}. We assume that the locking
-protocol allows early release in the sense that it no longer holds locks on parts of the data structure that it has finished traversing; 
-our assumptions are detailed in Section~\ref{sec:model}. We then invoke our algorithm, detailed in Section~\ref{sec:algorithm}, which 
+fine-grained locks, e.g.,~\cite{Gueta2011,SilberschatzK1980,dag} that satisfy some
+\emph{locking protocol}. Our assumptions on the data structure and locking scheme
+are detailed in Section~\ref{sec:model}. 
+We then invoke our algorithm, detailed in Section~\ref{sec:algorithm}, which 
 (1) adds version numbers to shared memory objects, 
 (2) identifies the read-only prefix of the code, 
-(3) replaces locks in the read-only prefix with tracking of the read objects' versions, and 
+(3) replaces locks in the read-only prefix with mere tracking of both locks and the read objects' versions, and 
 (4) introduces appropriate re-validation mechanisms.  
 Re-validation occurs at the end of the read-only phase, as well as during timeouts and exceptions. 
 The latter addresses exceptions and infinite loops that may arise when an operation sees an inconsistent view of the data structure. 
@@ -55,11 +58,11 @@ as proven in Section ~\ref{sec:proof}. The transformation is trivial to implemen
 We realize our approach with the Domination Locking scheme~\cite{Gueta2011}, 
 which is applicable to tree and forest data structures. 
 We apply the appropriate code transformations to balanced and unbalanced tree data structure implementations in Java$^{TM}$. 
-In Section~\ref{sec:eval} we evaluate the resulting code on a 32-core machine, 
+In Section~\ref{sec:eval} we evaluate the resulting code on a $32$-core machine, 
 and compare it to fully pessimistic as well as state-of-the-art hand-crafted
 data structure implementations~\cite{DrachslerVY2014,BronsonCCO2010}.
-Our results show that the optimistic approach successfully overcomes synchronization bottlenecks, 
-allows the synthesized code to scale linearly with the number of threads, 
+Our results show that the optimistic approach successfully overcomes synchronization bottlenecks:  
+our synthesized data structures scale linearly \Idit{is linearly true?} with the number of threads, 
 and achieve comparable performance to that of custom-tailored solutions.
 
 To conclude, this paper illustrates that automatic synchronization is a promising approach for bringing legacy code to emerging computer architectures. 
