--- a/Tex/src/algorithm.tex
+++ b/Tex/src/algorithm.tex
@@ -53,8 +53,8 @@ Next we explain what the transformation does in each phase.
   and a \emph{read set}. 
   The locked set is used to track the lock and unlock steps
   of the locking protocol, thus, we replace each lock step 
-  with a a step adding the object to the locked set and each
-  unlock step with a step removing the object from the read
+  with a step adding the object to the locked set and each
+  unlock step with a step removing the object from the locked
   set. (Since the locking protocol might allow re-entrant locks, 
   our locked set allows duplications and the remove operation
   removes one of the duplications of the object).  
@@ -64,7 +64,7 @@ operation in order to later validate that this read set
 belongs to a consistent view of shared memory.  
 It contains a mapping between references to objects loaded 
 to the local version at the time it was read. After 
-objects are added to te read set they are checked to be 
+objects are added to the read set they are checked to be 
 unlocked, if the object is locked the operation restarts
 from the beginning. 
 
