--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -47,4 +47,5 @@
 %---------Comments -----------------------%
 \newcommand{\Idit}[1]{{\color{blue}{[\textbf{Idit:} #1 ]}}}
 \newcommand{\eshcar}[1]{{\textcolor{violet}{\{{\bf eshcar:} \em #1\}}}}
+\newcommand{\maya}[1]{{\textcolor{magenta}{\{{\bf maya:} \em #1\}}}}
 \newcommand{\Xomit}[1]{}
